# sulku

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: train.ipynb  wikipedia.ipynb
src/sulku/: __init__.py  __main__.py  cli.py  constants.py  http.py  main.py  prediction.py  utils.py
src/sulku/cli/: __init__.py  detect.py  generate_fasttext.py  generate_synthetic.py  sample.py  serve.py
src/sulku/dataset/: __init__.py  generator.py  models.py  paired.py  reader.py  yle.py  yle_readme.md
src/sulku/summarize/: llm.py  models.py  prompt.py
src/sulku/wpapi/: __init__.py  client.py  revert.py  router.py  service.py  trust.py
tests/: test_cli.py  test_dataset_reader.py  test_generator.py  test_http.py  test_llm.py  test_paired_dataset.py  test_utils.py
